--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,12 +3,13 @@
 <title>About Us</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<!--for social media icon-->
+<!-- Link tag -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
+    <!-- Wrapper class, add "aboutUs" class to specific div class and fix it in CSS -->
     <div class="wrapper aboutUs">
         <!--Header-->
         <header class="topHeader">
@@ -53,8 +54,9 @@
         </header>
 
 
-        <!--start Main content-->
+        <!-- Start Main content -->
         <main class="mainContent">
+            <!-- container for wrap the head image -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/AboutMe/piqsels_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
@@ -62,8 +64,9 @@
                 </div>
             </div>
 
-            <!--content-->
+            <!-- Content -->
             <div class="contentWrapper">
+                <!-- First content section, display the context "about us" -->
                 <section id="firstContent">
                     <h2>About Sött och Elegant</h2>
                     <span class="border"></span>
@@ -74,6 +77,7 @@
 
                 <!--Image content-->
                 <section id="secondContent">
+                    <!-- Create div "fixpics" because i want all the pictures here have max-width: 1200px in this page -->
                     <div class="fixpics">
                         <div class="row">
                             <div class="column">
@@ -92,8 +96,9 @@
         </main>
 
 
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
+            <!-- footerText section, wrap all the text content -->
             <section id="footerText">
                 <div class="footerContent">
                     <h4><strong>LOCATION</strong></h4>
@@ -110,6 +115,7 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </div>
             </section>
+            <!-- Social media section -->
             <section id="socialmedia">
                 <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 <a href="https://www.instragram.com" class="fa fa-instagram"></a>
