comment all html page

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -56,7 +56,7 @@
 
         <!-- Start Main content -->
         <main class="mainContent">
-            <!-- container for wrap the head image -->
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/AboutMe/piqsels_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
