--- a/Home.html
+++ b/Home.html
@@ -70,7 +70,7 @@
 
         <!-- Start Main content -->
         <main class="mainContent">
-            <!-- container for wrap the head image -->
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <!-- The head image -->
                 <img class="cafeHeadImg" src="pics/firstpage/cafeHeadContent_fixed.jpg" alt="sött och elegant, cafe" style="width: 100%;">
