--- a/Cakes.html
+++ b/Cakes.html
@@ -3,12 +3,13 @@
 <title>Products - Cakes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<!--for social media icon-->
+<!-- Link tag -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
+    <!-- Wrapper class, use "bakeries" class because it uses the same layout as bekeries page -->
     <div class="wrapper bakeries">
         <!--Header-->
         <header class="topHeader">
@@ -53,8 +54,9 @@
         </header>
 
 
-        <!--start Main content-->
+        <!-- Start Main content -->
         <main class="mainContent">
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Products/products_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
@@ -70,7 +72,7 @@
                 </section>
 
                 <!-- Second Content -->
-
+                <!-- this section displays the products with picture and caption -->
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
@@ -132,14 +134,6 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <!-- <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg">
-                                <figcaption>Bakery<br>
-                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                .</em></h6>
-                                </figcaption>
-                            </figure>
-                        </div> -->
                     </div>
                 </section>
             </div>
@@ -148,6 +142,7 @@
 
         <!--Footer-->
         <footer>
+            <!-- footerText section, wrap all the text content -->
             <section id="footerText">
                 <div class="footerContent">
                     <h4><strong>LOCATION</strong></h4>
@@ -164,6 +159,7 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </div>
             </section>
+            <!-- Social media section -->
             <section id="socialmedia">
                 <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 <a href="https://www.instragram.com" class="fa fa-instagram"></a>
