--- a/ContactUs.html
+++ b/ContactUs.html
@@ -3,12 +3,13 @@
 <title>Contact us</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<!--for social media icon-->
+<!-- Link tag -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
+    <!-- Wrapper class, add "contact" class to specific div class and fix it in CSS -->
     <div class="wrapper contact">
         <!--Header-->
         <header class="topHeader">
@@ -53,8 +54,9 @@
         </header>
 
 
-        <!--start Main content-->
+        <!-- Start Main content-->
         <main class="mainContent">
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/ContactUs/contact_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
@@ -62,8 +64,9 @@
                 </div>
             </div>
 
-            <!--content MAP-->
+            <!-- Content -->
             <div class="contentWrapper">
+                <!-- First content section, display the contact details -->
                 <section id="firstContent">
                     <h2>Contact</h2>
                     <span class="border"></span>
@@ -73,20 +76,25 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </section>
 
+                <!-- Second content, display a form so user can send thier information to server -->
+                <!-- create class "center" to center the object in this section -->
                 <section id="secondContent" class="center">
+                    <!-- Create div to wrap everyting in the form section -->
                     <div class="formWrapper">
                         <h2>HAVE ANOTHER QUERY?</h2>
+                        <!-- Create a form, use fieldset tag -->
+                        <!-- use type="text" to create textbox, placeholder for specific a short hint in textbox -->
                         <fieldset id="form">
                             <div class="formClass">
-                                <label>
+                                <label for="fname">
                                 Name:<br>
                                 <input type="text" name="name" placeholder="Your First Name"><br>
                             </label>
-                                <label>
-                                Lastname:<br>
+                                <label for="lname">
+                                Last name:<br>
                                 <input type="text" name="lastname"  placeholder="Your Last Name"><br>
                             </label>
-                                <label>
+                                <label for="email">
                                 Email:<br>
                                 <input type="text" name="email"  placeholder="Your Email"><br>
                             </label>
@@ -103,8 +111,9 @@
         </main>
 
 
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
+            <!-- footerText section, wrap all the text content -->
             <section id="footerText">
                 <div class="footerContent">
                     <h4><strong>LOCATION</strong></h4>
@@ -121,6 +130,7 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </div>
             </section>
+            <!-- Social media section -->
             <section id="socialmedia">
                 <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 <a href="https://www.instragram.com" class="fa fa-instagram"></a>
