--- a/Location.html
+++ b/Location.html
@@ -3,12 +3,13 @@
 <title>Location</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<!--for social media icon-->
+<!-- Link tag -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
+    <!-- Wrapper class, add "location" class to specific div class and fix it in CSS -->
     <div class="wrapper location">
         <!--Header-->
         <header class="topHeader">
@@ -53,8 +54,9 @@
         </header>
 
 
-        <!--start Main content-->
+        <!-- Start Main content-->
         <main class="mainContent">
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Location/location_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
@@ -64,6 +66,7 @@
 
             <!--content MAP-->
             <div class="contentWrapper">
+                <!-- First content section, display the location in text -->
                 <section id="firstContent">
                     <h2>Find us</h2>
                     <span class="border"></span>
@@ -71,45 +74,18 @@
                         Stockholm, Sweden</address>
                 </section>
 
+                <!-- Second content, display a google map photo and use 'a' tag to link it to the google map website -->
                 <section id="secondContent">
                     <a href="https://www.google.com/maps/place/Drottninggatan+20,+111+51+Stockholm,+Sweden/@59.3302632,18.062934,17z/data=!3m1!4b1!4m5!3m4!1s0x465f9d5ef954fba9:0x58f0ce8364dc291a!8m2!3d59.3302632!4d18.0651227">
                         <img src="pics/Location/Map.PNG" alt="cafe location"></a>
-
                 </section>
-
-                <!-- <div id="map"></div>
-
-                <script>
-                    // Initialize and add the map
-                    function initMap() {
-                        // The location of Uluru
-                        var uluru = {
-                            lat: 59.3293,
-                            lng: 18.0686
-                        };
-                        // The map, centered at Uluru
-                        var map = new google.maps.Map(
-                            document.getElementById('map'), {
-                                zoom: 4,
-                                center: uluru
-                            });
-                        // The marker, positioned at Uluru
-                        var marker = new google.maps.Marker({
-                            position: uluru,
-                            map: map
-                        });
-                    }
-                </script>
-                <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAe0sYr6LC9Gw5KPkjHgL9QeDvlb5viaaA&callback=initMap">
-                </script> -->
-
             </div>
-
         </main>
 
 
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
+            <!-- footerText section, wrap all the text content -->
             <section id="footerText">
                 <div class="footerContent">
                     <h4><strong>LOCATION</strong></h4>
@@ -126,6 +102,7 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </div>
             </section>
+            <!-- Social media section -->
             <section id="socialmedia">
                 <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 <a href="https://www.instragram.com" class="fa fa-instagram"></a>
