--- a/Wedding.html
+++ b/Wedding.html
@@ -3,12 +3,13 @@
 <title>Services - Wedding</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<!--for social media icon-->
+<!-- Link tag -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
+    <!-- Wrapper class, add "wedding" class to specific div class and fix it in CSS -->
     <div class="wrapper wedding">
         <!--Header-->
         <header class="topHeader">
@@ -53,8 +54,9 @@
         </header>
 
 
-        <!--start Main content-->
+        <!-- Start Main content -->
         <main class="mainContent">
+            <!-- container for wrap the head image and text -->
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Services/wedding_head_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
@@ -73,8 +75,9 @@
                 </section>
 
                 <!-- Second Content -->
-                <!--Image content-->
+                <!-- Image content-->
                 <section id="secondContent">
+                    <!-- Create div "fixpics" because i want all the pictures here have max-width: 1200px in this page -->
                     <div class="fixpics">
                         <div class="row">
                             <div class="column">
@@ -95,13 +98,13 @@
                         </div>
                     </div>
                 </section>
-
             </div>
         </main>
 
 
         <!--Footer-->
         <footer>
+            <!-- footerText section, wrap all the text content -->
             <section id="footerText">
                 <div class="footerContent">
                     <h4><strong>LOCATION</strong></h4>
@@ -118,6 +121,7 @@
                     <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </div>
             </section>
+            <!-- Social media section -->
             <section id="socialmedia">
                 <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 <a href="https://www.instragram.com" class="fa fa-instagram"></a>
