--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,8 @@
                         <!-- First Tier Drop Down -->
                         <!-- class "toggle" will show in the small devices -->
                         <label for="drop-1" class="toggle">PRODUCTS +</label>
-                        <a href="#">PRODUCTS</a>
+                        <!-- This for desktop -->
+                        <a href="#">PRODUCTS +</a>
                         <!-- "checkbox" will be checked when user click PRODUCTS + -->
                         <input type="checkbox" id="drop-1">
                         <!-- Sub-menu -->
@@ -54,7 +55,7 @@
                     <li>
                         <!-- First Tier Drop Down -->
                         <label for="drop-2" class="toggle">SERVICES +</label>
-                        <a href="#">SERVICES</a>
+                        <a href="#">SERVICES +</a>
                         <input type="checkbox" id="drop-2">
                         <ul>
                             <li><a href="Wedding.html">Wedding</a></li>
