--- a/ContactUs.html
+++ b/ContactUs.html
@@ -28,7 +28,7 @@
                     <li>
                         <!-- First Tier Drop Down -->
                         <label for="drop-1" class="toggle">PRODUCTS +</label>
-                        <a href="#">PRODUCTS</a>
+                        <a href="#">PRODUCTS +</a>
                         <input type="checkbox" id="drop-1">
                         <ul>
                             <li><a href="Bakeries.html">Bakeries</a></li>
@@ -40,7 +40,7 @@
                     <li>
                         <!-- First Tier Drop Down -->
                         <label for="drop-2" class="toggle">SERVICES +</label>
-                        <a href="#">SERVICES</a>
+                        <a href="#">SERVICES +</a>
                         <input type="checkbox" id="drop-2">
                         <ul>
                             <li><a href="Wedding.html">Wedding</a></li>
